--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       OLLAMA_HOST: ${OLLAMA_HOST}
     volumes:
-      - timescale_data:/var/lib/postgresql/data
+      - ./database/pg:/var/lib/postgresql/data
     network_mode: host
 
   vectorizer-worker:
@@ -17,6 +17,3 @@ services:
       PGAI_VECTORIZER_WORKER_DB_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
       OLLAMA_HOST: localhost:11434
     network_mode: host
-
-volumes:
-  timescale_data:
