Improve the docker compose with volumes

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,12 +8,17 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       OLLAMA_HOST: ${OLLAMA_HOST}
     volumes:
-      - ./database/pg:/var/lib/postgresql/data
+      - data:/home/postgres/pgdata/data
+    command: [ "-c", "ai.ollama_host=http://${OLLAMA_HOST}:${OLLAMA_PORT}" ]
     network_mode: host
 
   vectorizer-worker:
     image: timescale/pgai-vectorizer-worker:pgai-v0.2.1
     environment:
       PGAI_VECTORIZER_WORKER_DB_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
-      OLLAMA_HOST: localhost:11434
+      OLLAMA_HOST: ${OLLAMA_HOST}:${OLLAMA_PORT}
+    command: [ "--poll-interval", "5s", "--log-level", "DEBUG" ]
     network_mode: host
+
+volumes:
+  data:
